[tool.poetry]
name = "aiocloudpayments"
version = "0.0.4"
description = "CloudPayments Python Async Library"
authors = ["drforse <george.lifeslice@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/drforse/aiocloudpayments"
repository = "https://github.com/drforse/aiocloudpayments"
keywords = ["cloudpayments", "python", "asyncio"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.16.0"
aresponses = "^2.1.4"

[tool.poetry.extras]
ujson = ["ujson"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

